# gl_rays

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  Makefile  README.md  build.sh  cmake_install.cmake  vcpkg.json
.cmake/api/v1/reply/: index-2023-12-30T23-47-06-0789.json  index-2024-02-21T20-21-20-0529.json
models/: shape.mobj  shape_ape.mobj  shape_ape_old.mobj  shape_dbg.mobj  shape_demo.mobj  shape_temp.mobj
shaders/: compute.glsl  compute_debug.glsl  compute_spheres.glsl  fragment.glsl  vertex.glsl
shaders/lib/: random.glsl  raymath.glsl
shaders/plane/: fragment.glsl  vertex.glsl
shaders/render/: compute.glsl
src/: main.cpp  plane.cpp  shader.cpp  texture.cpp
src/application/: app.cpp  app.hpp  renderer.cpp  renderer.hpp
src/buffers/: buffer.cpp  buffer.hpp  ssbo.cpp  ssbo.hpp  ubo.cpp  ubo.hpp
src/mesh/: bvh.cpp  bvh.hpp  importer.cpp  importer.hpp  mesh.cpp  mesh.hpp
src/objects/: plane.cpp  texture.cpp  texture.hpp
src/settings/: camera.cpp  camera.hpp  render.cpp  render.hpp  state.cpp  state.hpp
src/shader/: loader.cpp  loader.hpp  plane.cpp  plane.hpp  program.cpp  program.hpp  shader.cpp  shader.hpp  texture.hpp
src/window/: imgui_style.hpp  window.cpp  window.hpp
